...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="in7-KF-uyG">
                                <rect key="frame" x="101.5" y="122" width="172" height="30"/>
                                <state key="normal" title="Hosted UI Userpool tests"/>
                                <connections>
                                    <segue destination="4xE-Wp-lW2" kind="show" id="x9R-5r-cB0"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bSk-IR-WaP">
                                <rect key="frame" x="148" y="146" width="79" height="30"/>
                                <state key="normal" title="SignIn User"/>
                                <connections>
                                    <action selector="onLaunchCognitoAuthSignIn:" destination="r46-A3-owT" eventType="touchUpInside" id="HS0-xc-BaT"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BAf-Rr-YwL">
                                <rect key="frame" x="116" y="272" width="143" height="30"/>
                                <state key="normal" title="User pool operations"/>
                                <connections>
                                    <segue destination="mG6-DT-ukZ" kind="show" id="oIV-qf-1As"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nlk-8p-X7B">
                                <rect key="frame" x="166.5" y="92" width="24" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="userPoolSignInStateLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.1166862764" green="0.24307424650000001" blue="0.60000404789999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
        <scene sceneID="d0k-fc-SnU">
            <objects>
                <viewController title="UserPool" id="4xE-Wp-lW2" customClass="HostedUIUserPoolViewController" customModule="AWSAuthSDKTestApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="234-oa-ZXM">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                <rect key="frame" x="112" y="357" width="151" height="29"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="invalidateAccessToken"/>
                                <connections>
                                    <action selector="invalidateAccessToken:" destination="4xE-Wp-lW2" eventType="touchUpInside" id="UvZ-Re-h3A"/>
...
                                <rect key="frame" x="112" y="419" width="151" height="29"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="invalidateRefreshToken"/>
                                <connections>
                                    <action selector="invalidateRefreshToken:" destination="4xE-Wp-lW2" eventType="touchUpInside" id="rnE-cD-hXN"/>
...
        <scene sceneID="WNH-XR-mxG">
            <objects>
                <viewController title="User Details" id="mG6-DT-ukZ" customClass="UserDetailsViewController" customModule="AWSAuthSDKTestApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="4dj-LO-8RH">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                <rect key="frame" x="112" y="512" width="151" height="29"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="Update User Attribute"/>
                                <connections>
                                    <action selector="updateUserAttributeAction:" destination="mG6-DT-ukZ" eventType="touchUpInside" id="HNC-kP-PDW"/>
...
